Revision history for Open-This

{{$NEXT}}

0.000022  2019-10-24 01:53:11Z
    - Avoid false positives when testing URLs (GH#27) (José Joaquín Atria)
    - Avoid calling is_module_name twice in parse_text (GH#28) (José Joaquín Atria)
    - Make sure we don't require modules to find them (GH#26) (José Joaquín Atria)

0.000021  2019-08-25 17:11:12Z
    - Use Module::Util to find modules without requiring them (GH#24) (José Joaquín Atria)

0.000020  2019-06-21 14:45:12Z
    - Support the pseudo-paths that git diff and friends will display (GH#23) (mannih)
    - Parse Ansible error messages (GH#20) (Olaf Alders)

0.000019  2019-06-14 13:49:45Z
    - Add support for Kate editor (GH#17) (José Joaquín Atria)
    - Document supported editors

0.000018  2019-06-10 17:02:19Z
    - Print usage when ot is called with no arguments (GH#16) (José Joaquín
      Atria)

0.000017  2019-05-29 18:24:11Z
    - Parse file paths out of full GitHub URLs. (GH#15) (Olaf Alders)

0.000016  2019-05-27 17:20:10Z
    - Add column number parsing for ripgrep output and add support for opening
      files at arbitrary columns in vim (GH#12) (Olaf Alders)
    - Add support for opening files at arbitrary columns in nano (GH#14) (Olaf Alders)
    - ot can now open binaries which are in the user's path (GH#13) (Olaf Alders)

0.000015  2019-01-28 21:43:33Z
    - Don't exec if $EDITOR is empty, die with message (GH#9) (Boris Dppen)
    - Render the command name in description as a link (GH#7) (Boris Dppen)

0.000014  2018-12-18 21:57:14Z
    - Fix parsing of GitHub links (GH#6) (Olaf Alders)

0.000013  2018-12-18 16:57:31Z
    - Add a -b (browse) option to ot. Also add editor_args_from_parsed_text()
      and maybe_get_url_from_parsed_text (GH#5) (Olaf Alders)

0.000012  2018-12-03 19:26:46Z
    - Parse line numbers from the fragments of GitHub URLs

0.000011  2018-08-23 11:59:02Z
    - Fix some tests under Windows

0.000010  2018-08-22 13:43:42Z
    - Don't rely on a working grep binary
