@@ -1,6 +1,7 @@
 Revision history for Open-This
 
 {{$NEXT}}
+    - Parse file paths from "mvn test" output
 
 0.000022  2019-10-24 01:53:11Z
     - Avoid false positives when testing URLs (GH#27) (José Joaquín Atria)
